commited by hitesh

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Inter+Tight:wght@300;400;500;600;700&family=Inter:wght@300;500;700&family=Irish+Grover&family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@500;600;700&family=Raleway:wght@400;500;700&family=Source+Code+Pro:wght@500&family=Source+Sans+3&family=Teko:wght@300&display=swap" rel="stylesheet">
+
+
+
     <title>React App</title>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
