--- a/public/index.html
+++ b/public/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>Build Your Website for your Business | Enfiq</title>
+    <link rel="icon" type="text/png" href="./Enfiq.png" />
+    <meta name="description" content="Your one-stop solution for UI/UX Designing, FullStack Website Development, SEO Optimisation and ChatBot Development" />
+    <meta name="robots" content="nofollow" />
+    <meta name="keywords" content="Web-Design, Web-Development, SEO, Web-Hosting, Digital Agency">
+    <meta name="author" content="Enfiq">  
+
+    <link rel="canonical" href="https://www.enfiq.com/#service" />
+    <link rel="canonical" href="https://www.enfiq.com/#portfolio" />
+    <link rel="canonical" href="https://cal.com/enfiq/30min" />
+
+
+    <meta property="og:title" content="Think it, Build it | Enfiq" />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="og:description" content="Your one-stop solution for UI/UX Designing, FullStack Website Development, SEO Optimisation and ChatBot Development" />
+    <meta property="og:image" content="enfiqimg.png" />
+    <meta property="og:image:width" content="1200px" />
+    <meta property="og:image:height" content="630px" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      property="og:image:alt"
+      content="Think it, Build it | Enfiq"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      property="og:image:type"
+      content="image/png"
+    />
+    <meta property="og:url" content="https://www.enfiq.com" />
+    <meta property="og:site_name" content="Enfiq" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Inter+Tight:wght@300;400;500;600;700&family=Inter:wght@300;500;700&family=Irish+Grover&family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@500;600;700&family=Raleway:wght@400;500;700&family=Source+Code+Pro:wght@500&family=Source+Sans+3&family=Teko:wght@300&display=swap" rel="stylesheet">
-
-
-
-    <title>React App</title>
-
-
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="https://www.enfiq.com" />
+    <meta name="twitter:title" content="Think it, Build it | Enfiq" />
+    <meta name="twitter:creator" content="Enfiq" />
+    <meta
+      name="twitter:description"
+      content="Your one-stop solution for UI/UX Designing, FullStack Website Development, SEO Optimisation and ChatBot Development"
+    />
+    <meta name="twitter:image" content="enfiqimg.png" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
+    <meta name="framer-search-index" content="https://framerusercontent.com/sites/3BgDuIC1Bgafq4j356Qrqv/searchIndex-3ijMQ8rHCdyi.json">
+    <link rel="canonical" href="https://www.enfiq.com/">
+    <meta property="og:url" content="https://www.enfiq.com/">
+    <meta name="audience" content="all">  
+    <meta name= "revisit-after" content=" 14 days">  
+    <meta name="distribution" content="global">  
+    <meta name="publisher" content="Enfiq">  
+    <meta name="copyright" content="Copyright 2023">  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
